todo-db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: todo-db
  name: todo-db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: todo-db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: todo
        - name: MYSQL_PASSWORD
          value: "1234"
        - name: MYSQL_ROOT_PASSWORD
          value: admin
        - name: MYSQL_USER
          value: todo
        image: mysql:5.7
        name: todo-db
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
status: {}
