todo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: todo
  name: todo
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: todo
    spec:
      containers:
      - image: mumoo/todo
        name: todo
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
